[tool.poetry]
name = "parser-combinator"
version = "0.1.0"
description = ""
authors = ["Brian <heynairb@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_combinator"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

